pocket-id-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    goldilocks.fairwinds.com/enabled: "true"
