pocket-id-ton/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id-tailscale
  namespace: pocket-id
spec:
  selector:
    app.kubernetes.io/name: pocket-id
  ports:
  - protocol: TCP
    port: 1411
    targetPort: 1411
  type: ClusterIP
