pocket-id-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  hosts:
    - id.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: pocket-id
            port:
              number: 80
